修改需求说明：抛弃Qt客户端方案，改为B/S架构，明确了前端功能需求，确定了后端技术选型

--- a/基于无线网络的路灯监控系统需求说明.md
+++ b/基于无线网络的路灯监控系统需求说明.md
@@ -1,123 +1,116 @@
 
-
 ### **基于无线网络的路灯监控系统开发计划书**
 
 #### **1. 项目概述**
 
 *   **项目名称**：基于无线网络的路灯监控系统
-*   **项目目标**：设计并实现一套以STM32F103C8T6为核心、通过Wi-Fi通信、采用C/S架构的远程路灯监控系统。系统旨在实现路灯状态的实时采集、远程智能控制、故障告警以及可视化展示，达到节能降耗、提升运维效率的目的。
-*   **核心技术选型**：
-    *   **微控制器**：STM32F103C8T6
-    *   **后端技术**：C++
-    *   **数据库**：MySQL
-    *   **无线技术**：Wi-Fi
-    *   **系统架构**：C/S (客户端/服务器)
-    *   **客户端**：Qt (用于开发功能丰富的桌面客户端)
-    *   **前端技术**：Vue 3 + Element Plus (用于开发轻量级的Web监控界面，作为补充或替代方案)
+*   **项目目标**：设计并实现一套基于B/S架构的路灯远程监控系统。系统以STM32F103C8T6为核心控制器，通过Wi-Fi接入网络，使用C++开发后端服务，MySQL进行数据存储，并通过Web前端页面为用户提供可视化的路灯状态监控、远程控制和数据管理功能。
+*   **核心价值**：实现路灯管理的智能化、网络化和可视化，提升运维效率，降低能耗。
 
 #### **2. 系统架构与功能详细说明**
 
-系统整体分为四个部分：**路灯终端节点**、**后端服务器**、**客户端** 和 **数据库**。
+系统采用**B/S架构**，分为四层：**设备层、网络层、服务层、应用层**。
 
+| 架构层 | 组成部分 | 核心职责 |
+| :--- | :--- | :--- |
+| **设备层** | STM32F103C8T6 + 传感器 + 执行器 | 数据采集、指令执行 |
+| **网络层** | WiFi模块 (ESP8266-01S) + 路由器/AP | 提供无线网络连接，传输MQTT消息 |
+| **服务层** | C++后端服务、MQTT Broker、MySQL数据库 | 消息路由、业务逻辑、数据持久化 |
+| **应用层** | Web前端页面 (HTML/CSS/JS) | 提供用户交互界面 |
 
+##### **2.1 设备层功能**
+*   **主控芯片**：STM32F103C8T6（核心板）
+*   **数据采集**：
+    *   **开关状态**：通过读取继电器状态或回路电流判断。
+    *   **故障检测**：通过电流传感器（如ACS712）检测回路电流，若低于阈值则判定为故障。
+    *   **电压/电流监测**：使用ADC通道采集传感器数据。
+    *   **环境光照度**（可选）：通过ADC采集光敏电阻分压值。
+*   **远程控制**：
+    *   **开关控制**：通过GPIO输出高低电平控制继电器通断。
+    *   **调光控制**：通过PWM占空比调节，实现LED路灯的亮度调节。
+*   **网络通信**：
+    *   **通信模块**：ESP8266-01S WiFi模块。
+    *   **连接方式**：STM32通过UART串口，使用AT指令与ESP8266进行通信。
 
-##### **2.1 路灯终端节点 (STM32F103C8T6)**
+##### **2.2 服务层功能**
+*   **MQTT Broker**：
+    *   **功能**：作为整个系统的消息中枢，负责所有设备与服务之间的消息路由。
+    *   **实现**：部署开源组件**EMQX**或**Mosquitto**。
+*   **C++后端服务**：
+    *   **功能1：设备消息处理**
+        *   作为MQTT客户端，订阅设备上报主题（如 `device/status`）。
+        *   解析设备上传的JSON数据，并将设备状态更新至MySQL数据库。
+    *   **功能2：业务逻辑API**
+        *   提供**RESTful API**供前端调用。
+        *   处理前端的控制请求，生成控制指令并发布到设备控制主题（如 `device/control/{deviceId}`）。
+        *   处理前端的数据查询请求，从数据库查询并返回数据。
+    *   **功能3：数据持久化**
+        *   将设备状态、告警信息、操作日志等结构化存储到MySQL数据库。
+*   **MySQL数据库**：
+    *   **主要数据表**：
+        *   `device_info`：存储设备ID、名称、位置、分组等静态信息。
+        *   `device_status`：存储设备最新的状态（在线、开关、亮度、电流、电压等）。
+        *   `device_history`：存储设备状态的历史记录，用于图表分析。
+        *   `alarm_log`：存储设备故障告警记录。
+        *   `control_log`：存储用户下发的控制指令日志。
 
-*   **核心功能**：
-    *   **数据采集**：
-        *   **开关状态**：通过检测继电器状态或回路电流判断。
-        *   **故障检测**：通过电流传感器（如ACS712）检测回路电流，若电流异常（如过流、为零）则判定为故障。
-        *   **电压/电流监测**：使用ADC采集电压分压电路和电流传感器的模拟值。
-        *   **环境光照度**（可选）：通过I2C接口连接BH1750传感器采集。
-    *   **远程控制**：
-        *   **开关控制**：通过GPIO控制继电器通断。
-        *   **调光控制**：通过PWM输出控制，实现亮度调节。
-    *   **无线通信**：
-        *   通过UART串口与ESP8266 Wi-Fi模块通信，使用AT指令连接路由器并收发数据。
-
-##### **2.2 后端服务器 (C++实现)**
-
-*   **核心功能**：
-    *   **通信枢纽 (MQTT Broker)**：部署一个独立的MQTT代理服务器（EMQX），负责所有终端和客户端之间的消息路由。
-    *   **数据接收与处理服务 (C++ Daemon)**：
-        *   **MQTT订阅**：订阅主题（如`lamp/+/status`）以接收所有终端上报的状态数据。
-        *   **数据解析**：解析JSON格式的传感器数据。
-        *   **数据存储**：将解析后的数据（状态、电流、电压等）写入MySQL数据库。
-        *   **告警判断**：根据业务逻辑（如电流为零判断为故障）生成告警信息，并存入数据库、发布到告警主题。
-    *   **控制指令转发服务**：
-        *   **提供TCP/HTTP API**（供Qt客户端调用）或直接订阅MQTT控制主题。
-        *   接收客户端的控制指令，将其转发发布到对应的MQTT主题（如`lamp/001/control`）。
-    *   **业务逻辑**：实现群控、定时任务等复杂逻辑。
-
-##### **2.3 客户端 (Qt实现)**
-
-*   **核心功能**：
-    *   **用户登录与认证**。
-    *   **设备地图可视化**：在Qt的Graphics View或集成QML地图组件中显示路灯位置和状态（使用不同颜色图标）。
-    *   **设备列表与管理**：以列表形式展示所有路灯，支持信息查询、分组、筛选。
-    *   **实时状态监控**：通过TCP Socket或MQTT客户端实时接收并显示服务器推送的路灯状态。
-    *   **远程控制面板**：提供按钮、滑块等UI组件，用于发送开关、调光指令。
-    *   **告警中心**：以弹窗、列表等形式实时显示系统告警。
-    *   **数据统计与报表**：使用Qt Charts库绘制能耗、亮灯率等统计图表。
-
-##### **2.4 数据库 (MySQL)**
-
-*   **主要表结构**：
-    *   `device_info`：设备信息表 (ID, 名称, 位置, 分组, IP等)
-    *   `device_status`：设备状态记录表 (设备ID, 时间戳, 开关状态, 电流, 电压, 亮度等)
-    *   `alarm_log`：告警日志表 (设备ID, 告警类型, 告警时间, 处理状态)
-    *   `control_log`：控制日志表 (操作者, 设备ID, 指令, 执行时间)
-    *   `user`：用户表
+##### **2.3 应用层功能**
+*   **技术栈**：HTML5 + CSS3 + JavaScript，可搭配Bootstrap等UI框架快速构建界面。
+*   **核心页面与功能**：
+    *   **登录页**：用户身份认证。
+    *   **设备地图/总览页**：
+        *   以卡片列表或模拟地图的形式展示所有路灯。
+        *   使用不同颜色和图标区分路灯状态（如：绿色-在线且开启，灰色-在线但关闭，红色-故障，黑色-离线）。
+    *   **设备监控与控制面板**：
+        *   点击单个路灯，弹出详情面板，显示其详细参数（电压、电流、亮度）。
+        *   提供**开关**、**调光滑块**等控制元件。
+        *   提供**分组控制**功能（如“开启A区所有路灯”）。
+    *   **数据统计与图表页**：
+        *   使用ECharts等图表库绘制历史数据曲线，如单灯能耗趋势图、全系统亮灯率统计图。
+    *   **告警管理页**：
+        *   以列表形式展示实时和历史告警信息。
+        *   支持告警确认和处理。
 
 #### **3. 实现所需技术详述**
 
-##### **3.1 硬件层**
-*   **MCU**：STM32F103C8T6 (使用标准库开发)
-*   **Wi-Fi模块**：ESP8266-01S (AT指令固件)
-*   **传感器**：ACS712电流传感器、电阻分压电路（电压）、BH1750（光照，可选）
-*   **执行器**：5V继电器模块、MOSFET管（如IRF520，用于PWM调光）
-*   **电源**：LM2596等DC-DC降压模块为系统提供3.3V和5V电源
-*   **开发环境**：Keil MDK
+##### **3.1 硬件技术**
+*   **主控MCU**：STM32F103C8T6，使用STM32CubeMX初始化配置，HAL库或标准库开发。
+*   **WiFi模块**：ESP8266-01S，工作模式：STA模式（连接到无线路由器）。
+*   **通信协议**：UART，波特率115200，使用AT指令集。
+*   **传感器与执行器**：
+    *   继电器模块（5V）：控制路灯开关。
+    *   ACS712电流传感器模块：检测路灯工作电流。
+    *   MOSFET模块（如IRF520）：配合PWM实现调光。
+    *   光敏电阻模块（可选）：检测环境光照。
 
-##### **3.2 通信层**
-*   **协议**：MQTT over Wi-Fi
-*   **数据格式**：JSON
-    *   **上行示例(设备向服务器报告自身状态)** (`lamp/001/status`)： `{"id":"001", "state":1, "current":0.45, "voltage":220, "fault":0, "lux":25}`
-    *   **下行示例(服务器向设备发送控制命令)** (`lamp/001/control`)： `{"cmd":"set", "state":1, "brightness":80}`
+##### **3.2 软件与协议**
+*   **设备端（STM32）**：
+    *   **开发环境**：Keil MDK或STM32CubeIDE。
+    *   **关键逻辑**：
+        1.  初始化外设（GPIO, UART, ADC, TIM/PWM）。
+        2.  通过UART发送AT指令配置ESP8266连接WiFi和MQTT Broker。
+        3.  定时采集传感器数据。
+        4.  将数据封装为JSON格式，通过MQTT协议发布到主题 `lamp/status/{device_id}`。
+        5.  订阅主题 `lamp/control/{device_id}`，接收并解析控制指令，执行相应操作。
+*   **通信协议**：
+    *   **MQTT**：作为主要通信协议。主题设计如下：
+        *   状态上报：`lamp/status/{device_id}`
+        *   指令下发：`lamp/control/{device_id}`
+    *   **数据格式**：JSON。
+        *   **上报示例**：`{"id":"NODE01", "status":1, "fault":0, "current": 0.45, "voltage": 220, "brightness": 100}`
+        *   **指令示例**：`{"cmd": "set", "brightness": 50}` 或 `{"cmd": "switch", "state": "off"}`
+*   **服务端（C++）**：
+    *   **开发环境**：Linux/Windows，编译器GCC/MSVC。
+    *   **关键技术/库**：
+        *   **MQTT客户端**：**Eclipse Paho MQTT C++ Client Library**。
+        *   **HTTP Server**：**cpp-httplib**（单头文件，轻量易用）或 **Crow**（一个类似于Python Flask的C++微框架）。
+        *   **JSON库**：**nlohmann/json**（业界最易用的C++ JSON库）。
+        *   **MySQL连接**：**MySQL Connector/C++**。
+        *   **交叉编译与部署**：可使用CMake管理项目。
+*   **前端**：
+    *   **技术栈**：HTML, CSS, JavaScript。
+    *   **UI框架**：Bootstrap 5。
+    *   **图表库**：Apache ECharts。
+    *   **HTTP客户端**：使用 `fetch` 或 `axios` 库调用后端RESTful API。
+    *   **WebSocket**（可选）：用于后端向前端主动推送实时告警信息，提升体验。
 
-##### **3.3 服务端与客户端 (C++ & Qt)**
-*   **后端C++服务**：
-    *   **MQTT客户端库**：Eclipse Paho MQTT C++
-    *   **数据库连接**：MySQL Connector/C++
-    *   **网络编程**：Boost.Asio (用于实现高性能TCP API服务器)
-    *   **JSON解析**：nlohmann/json
-    *   **构建工具**：CMake
-*   **Qt客户端**：
-    *   **框架**：Qt 5.15 LTS 或 Qt 6
-    *   **图表**：Qt Charts
-    *   **网络**：QTcpSocket, QMqttClient (Qt自带) 或 Paho MQTT C++ 嵌入
-    *   **并发**：QThread, QtConcurrent
-
-##### **3.4 前端技术 (备选/增强方案)**
-
-**关于Qt客户端与前端技术的说明**：
-**Qt for C/S架构是合理且强大的**，尤其适合需要与操作系统深度交互、处理复杂逻辑、要求高性能的**桌面级应用**。它能提供非常专业和流畅的用户体验。
-
-然而，考虑到现代监控系统对**远程访问、跨平台（无需安装）、易于部署和更新**的需求，因此将 **Web前端作为补充甚至主要方案**。
-
-*   **推荐技术栈**：**Vue 3 + TypeScript + Element Plus (UI) + ECharts (图表)**
-*   **优势**：
-    *   **跨平台**：任何有浏览器的设备（PC、手机、平板）均可访问。
-    *   **部署简单**：只需部署一次，客户端无需安装。
-    *   **生态丰富**：有大量成熟的图表、地图组件可供选择。
-*   **与后端集成**：该Web前端通过HTTP RESTful API与C++后端服务通信，获取数据和控制设备。这要求C++后端额外提供一组HTTP API。
-
-**建议**：**核心监控桌面客户端使用Qt开发，同时为移动端和便捷查询提供一个Vue 3开发的Web管理界面。** 这样结合了二者的优势。
-
-
----
-
-#### **4. 仿真方案**
-
-1.  **虚拟设备模拟器**：使用C++或Python编写一个程序，模拟大量STM32终端的行为。该程序可以同时创建多个MQTT客户端，模拟真实终端的上报频率和数据类型，并随机模拟故障，用于测试后端服务和客户端的承载能力与稳定性。
-2.  **硬件在环测试**：制作3-5个真实的路灯终端节点，进行小范围的真实环境测试，验证硬件设计的正确性和控制逻辑的准确性。
