--- a/基于无线网络的路灯监控系统需求说明.md
+++ b/基于无线网络的路灯监控系统需求说明.md
@@ -35,7 +35,7 @@
 ##### **2.2 服务层功能**
 *   **MQTT Broker**：
     *   **功能**：作为整个系统的消息中枢，负责所有设备与服务之间的消息路由。
-    *   **实现**：部署开源组件**EMQX**或**Mosquitto**。
+    *   **实现**：部署开源组件**EMQX**。
 *   **C++后端服务**：
     *   **功能1：设备消息处理**
         *   作为MQTT客户端，订阅设备上报主题（如 `device/status`）。
@@ -85,7 +85,7 @@
 
 ##### **3.2 软件与协议**
 *   **设备端（STM32）**：
-    *   **开发环境**：Keil MDK或STM32CubeIDE。
+    *   **开发环境**：Keil MDK。
     *   **关键逻辑**：
         1.  初始化外设（GPIO, UART, ADC, TIM/PWM）。
         2.  通过UART发送AT指令配置ESP8266连接WiFi和MQTT Broker。
